point3-@input done.

--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -11,17 +11,8 @@
 </div>
 <div>
   <ul>
-    <li *ngFor = "let hero1 of heroes" (click)="onSelect(hero)">{{hero1.name}} </li>
+    <li *ngFor = "let hero of heroes" (click)="onSelect(hero)">{{hero.name}} </li>
   </ul>
   
 </div>
-
-<div *ngIf=selectedHero>
-  <h2>{{selectedHero.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{selectedHero.id}}</div>
-  <div>
-    <label>name:
-      <input [(ngModel)]="selectedHero.name" placeholder="name">
-    </label>
-  </div>
-</div>  
+<app-hero-detail [hero]="selectedHero"></app-hero-detail>
